contracts display tags

--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -15,6 +15,7 @@ block content
 				a(href='/profile/'+result[2]) #{result[2]}
 			p Worker: 
 				a(href='/profile/'+result[3]) #{result[3]}
+			p Tag: #{result[7]}
 			p Time: #{result[4]}
 			p Status: #{result[5]}
 		if result[5] == 'pending'
