--- a/templates/requests/workerList.jade
+++ b/templates/requests/workerList.jade
@@ -14,11 +14,16 @@ block content
 						h1.text-left Select Possible Workers
 				.row
 					.col-md-12.text-left
+						- var bools = [0, 1]
 						h2 Workers:
 						each worker in workers
 							.row.col-md-12
-								input(type='checkbox', name='workers', value=worker) 
-								|  #{worker}
+								if(id, worker, bools[1]) in interested:
+									input(type='checkbox', name='workers', value=worker, checked) 
+									|  #{worker}
+								else:
+									input(type='checkbox', name='workers', value=worker) 
+									|  #{worker}			
 					p
 					.col-md-2
 						button.btn.btn-primary.btn-block.btn-signin(type='submit') Submit
