--- a/templates/requests/viewPending.jade
+++ b/templates/requests/viewPending.jade
@@ -10,11 +10,16 @@ block content
 				ul.list-group
 					h4.list-group-item.list-group-item-info
 						a(href='/pending/'+'#{res[0]}') #{res[2]}
-					p.list-group-item Client: 
+					p.list-group-item 
+						b Client: 
 						a(href='/profile/'+res[1]) #{res[1]}
-					p.list-group-item Tag: #{res[7]}
-					//p.list-group-item #{res[3]}
-					p.list-group-item Address: #{res[4]}
+					.list-group-item 
+						.text-center
+							b Tag: 
+							span.badge(style="text-align: left;") #{res[7]}
+					p.list-group-item 
+						b Address: 
+						#{res[4]}
 					if res[5]
 						form(method='post', action='/pending/'+'#{res[0]}'+'/accept')
 							button.btn.btn-lg.btn-success.btn-block(type='submit') Set Not Interested
@@ -22,4 +27,4 @@ block content
 						form(method='post', action='/pending/'+'#{res[0]}'+'/accept')
 							button.btn.btn-lg.btn-danger.btn-block(type='submit') Set Interested
 	else
-		p No results found
+		h4 No results found
