--- a/templates/users/register.jade
+++ b/templates/users/register.jade
@@ -14,10 +14,10 @@ block content
 		.row
 			.col-md-4
 			.col-md-4
-				input.form-control.input-normal(type='text', name='username', placeholder='Username', required, autofocus)
-				input.form-control.input-normal(type='email', name='email', placeholder='Email Address', required)
-				input.form-control.input-normal(type='number', name='phone', placeholder='Phone')
-				input.form-control(type='password', name='password', placeholder='Password', required)
+				input.form-control.input-normal(type='text', name='username', placeholder='Username', required, autofocus, maxlength="20")
+				input.form-control.input-normal(type='email', name='email', placeholder='Email Address', required, maxlength="50")
+				input.form-control.input-normal(type='number', name='phone', placeholder='Phone', maxlength="15")
+				input.form-control(type='password', name='password', placeholder='Password', required, maxlength="60")
 				p.text-left
 					input(type='radio', name='typeuser', value='client', checked='checked')
 					|    Client
