--- a/templates/chat/chat.jade
+++ b/templates/chat/chat.jade
@@ -26,7 +26,8 @@ html(lang="en")
 				socket.emit('doneTyping', {});
 			}
 			$(document).ready(function() {
-				socket = io.connect('https://arcane-eyrie-4784.herokuapp.com/chat');
+				//socket = io.connect('https://arcane-eyrie-4784.herokuapp.com/chat');
+				socket = io.connect('https://helpinghand.scalingo.io/chat');
 				// socket = io.connect('http://' + document.domain + ':' + location.port + '/chat'); //possibly remove port in production
 				//Handle the SocketIO events
 				socket.on('connect', function() {
