--- a/templates/contracts/createContract.jade
+++ b/templates/contracts/createContract.jade
@@ -20,7 +20,7 @@ block content
 				.row
 					.col-md-6
 						//Time of job
-						input.form-control.input-normal(type='text', name='time', placeholder='Time', required, value=time)
+						input.form-control.input-normal(type='text', name='time', placeholder='Time', required)
 						p
 				.row
 					.col-md-2
